--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
               <p class="about__text">Десктопные приложения</p>
               <img
                 src="./img/skils/box-1.jpg"
+                srcset="./img/skils/box-1.jpg 1x, ./img/skils/box_d_img@2x.jpg 2x"
                 alt="Оптимизация страници под Пк"
                 width="370"
                 height="294"
@@ -269,6 +270,7 @@
               <p class="about__text">Мобильные приложения</p>
               <img
                 src="./img/skils/box-2.jpg"
+                srcset="./img/skils/box-2.jpg 1x, ./img/skils/box_d_img@2x-1.jpg 2x"
                 alt="Оптимизация страници под телефон"
                 width="370"
                 height="294"
@@ -278,6 +280,7 @@
               <p class="about__text">Дизайнерские решения</p>
               <img
                 src="./img/skils/box-3.jpg"
+                srcset="./img/skils/box-3.jpg 1x, ./img/skils/box_d_img@2x-2.jpg 2x"
                 alt="Оптимизация страници под планшет"
                 width="370"
                 height="294"
@@ -352,7 +355,29 @@
               </div>
             </li>
             <li class="our-team__item">
-              <img src="./img/teams/olha.jpg" alt="Ольга Репина" width="270" height="260" />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/teams/olha.jpg 1x, ./img/teams/olha_d_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/teams/olha_t_img.jpg 1x, ./img/teams/olha_t_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/teams/olha_m_img@1x.jpg 1x, ./img/teams/olha_m_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <img
+                  src="./img/teams/olha_m_img@1x.jpg"
+                  alt="Ольга Репина"
+                  width="450"
+                  height="460"
+                />
+              </picture>
               <div class="our-team__wraper">
                 <h3 class="our-team__name">Ольга Репина</h3>
                 <p lang="en" class="our-team__position">Frontend Developer</p>
@@ -413,7 +438,24 @@
               </div>
             </li>
             <li class="our-team__item">
-              <img src="./img/teams/nikolay.jpg" alt="Николай Тарасов" width="270" height="260" />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/teams/nikolay.jpg 1x, ./img/teams/nikolay_d_img@2x.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/teams/nikolay_t_img-2.jpg 1x, ./img/teams/nikolay_t_img@2x-2.jpg 2x"
+                  type="image/jpg"
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./img/teams/nikolay_m_img-2.jpg 1x, ./img/teams/nikolay_m_img@2x-2.jpg 2x"
+                  type="image/jpg"
+                />
+              <img src="./img/teams/nikolay_m_img-2.jpg" alt="Николай Тарасов" width="270" height="260" />
+               </picture>
               <div class="our-team__wraper">
                 <h3 class="our-team__name">Николай Тарасов</h3>
                 <p lang="en" class="our-team__position">Marketing</p>
